--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "2no",
   "version": "1.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "xml2js": "^0.4.19"
+  },
   "devDependencies": {
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.1"
