--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,8 +7,14 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch Program",
+      "name": "Launch nono tests",
       "program": "${workspaceFolder}/test-solve.js"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Launch serialization",
+      "program": "${workspaceFolder}/serialization/index.js"
     }
   ]
 }
