--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+  
     {
       "type": "node",
       "request": "launch",
@@ -19,8 +20,8 @@
     {
       "type": "node",
       "request": "launch",
-      "name": "Launch serialization",
-      "program": "${workspaceFolder}/serialization/index.js"
+      "name": "Launch parse xml",
+      "program": "${workspaceFolder}/parse.js"
     }
   ]
 }
